--- a/text-embedding-vector.ipynb
+++ b/text-embedding-vector.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -102,36 +102,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# @title { run: \"auto\" }\n",
+    "MODEL = \"text-embedding-004\"  # @param [\"text-embedding-004\", \"text-multilingual-embedding-002\",\"text-embedding-preview-0409\", \"text-multilingual-embedding-preview-0409\", \"textembedding-gecko@003\", \"textembedding-gecko-multilingual@001\"]\n",
+    "TASK = \"RETRIEVAL_DOCUMENT\"  # @param [\"RETRIEVAL_QUERY\", \"RETRIEVAL_DOCUMENT\", \"SEMANTIC_SIMILARITY\", \"CLASSIFICATION\", \"CLUSTERING\", \"QUESTION_ANSWERING\", \"FACT_VERIFICATION\"]\n",
+    "TEXT = \"Banana Muffin?\"  # @param {type:\"string\"}\n",
+    "TEXT = texts\n",
+    "TITLE = \"\"  # @param {type:\"string\"}\n",
+    "OUTPUT_DIMENSIONALITY = 256  # @param [1, 768, \"None\"] {type:\"raw\", allow-input:true}\n",
+    "\n",
+    "if not MODEL:\n",
+    "    raise ValueError(\"MODEL must be specified.\")\n",
+    "if not TEXT:\n",
+    "    raise ValueError(\"TEXT must be specified.\")\n",
+    "if TITLE and TASK != \"RETRIEVAL_DOCUMENT\":\n",
+    "    raise ValueError(\"TITLE can only be specified for TASK 'RETRIEVAL_DOCUMENT'\")\n",
+    "if OUTPUT_DIMENSIONALITY is not None and MODEL not in [\n",
+    "    \"text-embedding-004\",\n",
+    "    \"text-multilingual-embedding-002\",\n",
+    "    \"text-embedding-preview-0409\",\n",
+    "    \"text-multilingual-embedding-preview-0409\",\n",
+    "]:\n",
+    "    raise ValueError(f\"OUTPUT_DIMENTIONALITY cannot be specified for model '{MODEL}'.\")\n",
+    "if TASK in [\"QUESTION_ANSWERING\", \"FACT_VERIFICATION\"] and MODEL not in [\n",
+    "    \"text-embedding-004\",\n",
+    "    \"text-multilingual-embedding-002\",\n",
+    "    \"text-embedding-preview-0409\",\n",
+    "    \"text-multilingual-embedding-preview-0409\",\n",
+    "]:\n",
+    "    raise ValueError(f\"TASK '{TASK}' is not valid for model '{MODEL}'.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"tuple\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m model_name\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext-embedding-004\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      4\u001b[0m task\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRETRIEVAL_DOCUMENT\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m----> 5\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mTextEmbeddingModel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_pretrained\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# dimensionality: Optional[int] = 256,\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# inputs = [TextEmbeddingInput(text, task) for text in texts]\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# kwargs = dict(output_dimensionality=dimensionality) if dimensionality else {}\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# embeddings = model.get_embeddings(inputs, **kwargs)\u001b[39;00m\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/vertexai/_model_garden/_model_garden_models.py:291\u001b[0m, in \u001b[0;36m_ModelGardenModel.from_pretrained\u001b[0;34m(cls, model_name)\u001b[0m\n\u001b[1;32m    280\u001b[0m credential_exception_str \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m    281\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mUnable to authenticate your request.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    282\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mDepending on your runtime environment, you can complete authentication by:\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    287\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m- if in service account or other: please follow guidance in https://cloud.google.com/docs/authentication\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    288\u001b[0m )\n\u001b[1;32m    290\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 291\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_from_pretrained\u001b[49m\u001b[43m(\u001b[49m\u001b[43minterface_class\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mcls\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    292\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m auth_exceptions\u001b[38;5;241m.\u001b[39mGoogleAuthError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    293\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m auth_exceptions\u001b[38;5;241m.\u001b[39mGoogleAuthError(credential_exception_str) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me\u001b[39;00m\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/vertexai/_model_garden/_model_garden_models.py:208\u001b[0m, in \u001b[0;36m_from_pretrained\u001b[0;34m(interface_class, model_name, publisher_model, tuned_vertex_model)\u001b[0m\n\u001b[1;32m    203\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m interface_class\u001b[38;5;241m.\u001b[39m_INSTANCE_SCHEMA_URI:\n\u001b[1;32m    204\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    205\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mClass \u001b[39m\u001b[38;5;132;01m{\u001b[39;00minterface_class\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is not a correct model interface class since it does not have an instance schema URI.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    206\u001b[0m         )\n\u001b[0;32m--> 208\u001b[0m     model_info \u001b[38;5;241m=\u001b[39m \u001b[43m_get_model_info\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    209\u001b[0m \u001b[43m        \u001b[49m\u001b[43mmodel_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    210\u001b[0m \u001b[43m        \u001b[49m\u001b[43mschema_to_class_map\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m{\u001b[49m\u001b[43minterface_class\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_INSTANCE_SCHEMA_URI\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43minterface_class\u001b[49m\u001b[43m}\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    211\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    213\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    214\u001b[0m     schema_uri \u001b[38;5;241m=\u001b[39m publisher_model\u001b[38;5;241m.\u001b[39m_gca_resource\u001b[38;5;241m.\u001b[39mpredict_schemata\u001b[38;5;241m.\u001b[39minstance_schema_uri\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/vertexai/_model_garden/_model_garden_models.py:120\u001b[0m, in \u001b[0;36m_get_model_info\u001b[0;34m(model_id, schema_to_class_map, interface_class, publisher_model_res, tuned_vertex_model)\u001b[0m\n\u001b[1;32m    118\u001b[0m \u001b[38;5;66;03m# The default publisher is Google\u001b[39;00m\n\u001b[1;32m    119\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m model_id:\n\u001b[0;32m--> 120\u001b[0m     model_id \u001b[38;5;241m=\u001b[39m \u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mpublishers/google/models/\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mmodel_id\u001b[49m\n\u001b[1;32m    122\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m publisher_model_res:\n\u001b[1;32m    123\u001b[0m     publisher_model_res \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m    124\u001b[0m         _publisher_models\u001b[38;5;241m.\u001b[39m_PublisherModel(  \u001b[38;5;66;03m# pylint: disable=protected-access\u001b[39;00m\n\u001b[1;32m    125\u001b[0m             resource_name\u001b[38;5;241m=\u001b[39mmodel_id\n\u001b[1;32m    126\u001b[0m         )\u001b[38;5;241m.\u001b[39m_gca_resource\n\u001b[1;32m    127\u001b[0m     )\n",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"tuple\") to str"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<bound method IndexOpsMixin.tolist of 0              I would like to change my delivery date\n",
+      "1                              change delivery address\n",
+      "2    I would like to delay the delivery as I will b...\n",
+      "3    Can I check the status of order #12345? it has...\n",
+      "4    How long will order #483746 take? it has been ...\n",
+      "5    I would like to check my order status, the ord...\n",
+      "6        Can i get a refund , the product is defective\n",
+      "7        What is the return process for a spoilt item?\n",
+      "8        I got a wrong order, how do i do an exchange?\n",
+      "9    The items i received is totally not working, p...\n",
+      "Name: qn, dtype: object>]\n",
+      "I would like to change my delivery date\n",
+      "[0.022888263687491417, 0.002359802136197686, 0.0019464048091322184, -0.011447086930274963, 0.004758581519126892, -0.016411660239100456, -0.01941780373454094, 0.0016531210858374834, 0.013646667823195457, 0.008857974782586098, 0.00420465087518096, 0.04343574121594429, 0.07413917779922485, 0.013336907140910625, -0.04980216547846794, -0.04456538334488869, 0.014293785206973553, -0.0002501080452930182, -0.07384733855724335, 0.01811334863305092, 0.019002117216587067, 0.022244105115532875, 0.04856928810477257, 0.014424199238419533, 0.03172623738646507, -0.0005261703627184033, -0.0290804635733366, 0.01755755953490734, -0.021785758435726166, -0.048257093876600266, 0.055807359516620636, 0.05799030512571335, -0.028103986755013466, -0.048120077699422836, 0.050296854227781296, 0.042427774518728256, -0.009591996669769287, -0.012760298326611519, 0.040991444140672684, -0.05956294760107994, -0.05797729268670082, 0.04345434531569481, -0.0011506727896630764, 0.0368124395608902, 0.01101238839328289, -0.002639367012307048, -0.04839538782835007, 0.05145563557744026, -0.01506984792649746, 0.03448709100484848, 0.011784883216023445, 0.01362112257629633, -0.02062005177140236, -0.007746943272650242, -0.051443666219711304, -0.019485199823975563, -0.06209398806095123, -0.028813814744353294, 0.006572021637111902, 0.0029941617976874113, 0.02103244885802269, -0.0021440554410219193, 0.009751152247190475, -0.025532513856887817, 0.025248611345887184, -0.04841410741209984, 0.016335489228367805, 0.00930306501686573, -0.061570215970277786, 0.014842450618743896, 0.037706486880779266, 0.031572673469781876, -0.018935808911919594, -0.03152165189385414, 0.03156823292374611, -0.0564255528151989, 0.019876934587955475, -0.017435437068343163, 0.009032987989485264, 0.03359575569629669, 0.0216643288731575, 0.06495097279548645, 0.06595057249069214, 0.03368569537997246, 0.017049157992005348, -0.010275430977344513, 0.019729483872652054, -0.03883261978626251, -0.07916638255119324, -0.021612634882330894, 0.049045298248529434, 0.027023063972592354, 0.02673177607357502, 0.003743784734979272, 0.07735005766153336, -0.013034490868449211, -0.10825876891613007, -0.08068612962961197, 0.04738398268818855, 0.004022715147584677, -0.00892135500907898, 0.01737072691321373, -0.005444675218313932, -0.10663722455501556, 0.03902806341648102, -0.009837718680500984, -0.06021730974316597, -0.03990583121776581, -0.019733652472496033, 0.034662459045648575, -0.04478543996810913, -0.039320677518844604, -0.011790793389081955, 0.03239554539322853, -0.045568548142910004, 0.03495757654309273, -0.0021273649763315916, -0.0034330093767493963, -0.05306372418999672, 0.029025226831436157, 0.017284827306866646, -0.01981312595307827, -0.019782820716500282, 0.09083010256290436, 0.0516098290681839, 0.01834046095609665, 0.0329766683280468, 0.030420569702982903, -0.0782422125339508, -0.039217349141836166, 0.07253000885248184, -0.04459021985530853, 0.010532796382904053, -0.012518823146820068, -0.03314897045493126, -0.03912102058529854, 0.017967453226447105, -0.05421070009469986, 0.021812308579683304, 0.03320429101586342, -0.003475826233625412, -0.030349530279636383, -0.05137414485216141, 0.03217611461877823, -0.028696535155177116, -0.0037138760089874268, -0.0014605411561205983, 0.06732692569494247, -0.06661750376224518, 0.059932295233011246, -0.05097944661974907, -0.040874022990465164, 0.06913366913795471, -0.04591693729162216, 0.022243160754442215, -0.02529112808406353, 0.024403534829616547, -0.048968374729156494, 0.07664883881807327, 0.0022349075879901648, 0.03744987025856972, -0.0871737077832222, 0.010323376394808292, -0.006795795634388924, -0.03915437310934067, 0.040943291038274765, 0.020718641579151154, -0.040430545806884766, 0.015772303566336632, 0.008409452624619007, -0.0375698059797287, -0.031797848641872406, 0.01906236819922924, -0.14116789400577545, -0.008173765614628792, 0.03456662967801094, -0.007329830899834633, -0.056365080177783966, -0.012362164445221424, 0.0448695570230484, 0.1259649693965912, 0.03953023999929428, -0.04731981083750725, -0.015175665728747845, 0.04143178462982178, -0.01876261830329895, -0.0006503581535071135, 0.0022871107794344425, 0.025033842772245407, 0.04219565540552139, 0.0070688496343791485, 0.013591782189905643, -0.05450363829731941, 0.07358585298061371, -0.004104795400053263, -0.002192980144172907, -0.0266045480966568, 0.01589621976017952, -0.0052931890822947025, -0.07536569237709045, 0.06741897761821747, 0.047192614525556564, -0.03523103892803192, 0.011148592457175255, -0.0001996034843614325, 0.03417785465717316, -0.04377526044845581, -0.055983059108257294, 0.003915787674486637, 0.01936272531747818, -0.0256410613656044, 0.02327178232371807, -0.035714492201805115, -0.05035688355565071, 0.06912011653184891, -0.02155764028429985, 0.06667757034301758, 0.014815711416304111, 0.023905931040644646, -0.05889551714062691, 0.025321274995803833, 0.025273891165852547, 0.03253050893545151, -0.003261611331254244, -0.001107498537749052, -0.006166272331029177, -0.10297967493534088, 0.017367122694849968, 0.0025812555104494095, -0.06410803645849228, -0.007703195326030254, 0.013569862581789494, -0.012992192059755325, 0.036066122353076935, -0.048014674335718155, 0.05400485172867775, 0.028873126953840256, -0.055652275681495667, -0.03178559988737106, -0.013679025694727898, -0.0065378001891076565, 0.022508684545755386, 0.07212955504655838, 0.014666798524558544, -0.0015569814713671803, -0.03930420055985451, 0.04262964800000191, 0.05938876420259476, -0.011408365331590176, -0.026567187160253525, -0.0012906476622447371, -0.016922850161790848, 0.08064059913158417, -0.06217806041240692, -0.035643596202135086, -0.0380622036755085]\n",
+      "256\n"
      ]
     }
    ],
    "source": [
-    "# Load the text embeddings model\n",
     "from vertexai.language_models import TextEmbeddingInput, TextEmbeddingModel\n",
-    "model_name= \"text-embedding-004\",\n",
-    "task= \"RETRIEVAL_DOCUMENT\",\n",
-    "model = TextEmbeddingModel.from_pretrained(model_name)\n",
-    "# dimensionality: Optional[int] = 256,\n",
-    "# inputs = [TextEmbeddingInput(text, task) for text in texts]\n",
-    "# kwargs = dict(output_dimensionality=dimensionality) if dimensionality else {}\n",
-    "# embeddings = model.get_embeddings(inputs, **kwargs)\n"
+    "\n",
+    "\n",
+    "def embed_text(\n",
+    "    model_name: str,\n",
+    "    task_type: str,\n",
+    "    text: str,\n",
+    "    title: str = \"\",\n",
+    "    output_dimensionality=None,\n",
+    ") -> list:\n",
+    "    \"\"\"Generates a text embedding with a Large Language Model.\"\"\"\n",
+    "    model = TextEmbeddingModel.from_pretrained(model_name)\n",
+    "    text_embedding_input = TextEmbeddingInput(\n",
+    "        task_type=task_type, title=title, text=text\n",
+    "    )\n",
+    "    kwargs = (\n",
+    "        dict(output_dimensionality=output_dimensionality)\n",
+    "        if output_dimensionality\n",
+    "        else {}\n",
+    "    )\n",
+    "    embeddings = model.get_embeddings([text_embedding_input], **kwargs)\n",
+    "    return embeddings[0].values\n",
+    "\n",
+    "\n",
+    "# Get a text embedding for a downstream task.\n",
+    "print(TEXT)\n",
+    "t = 'I would like to change my delivery date'\n",
+    "print(t)\n",
+    "embedding = embed_text(\n",
+    "    model_name=MODEL,\n",
+    "    task_type=TASK,\n",
+    "    text=t,\n",
+    "    title=TITLE,\n",
+    "    output_dimensionality=OUTPUT_DIMENSIONALITY,\n",
+    ")\n",
+    "print(embedding)\n",
+    "print(len(embedding))  # Expected value: {OUTPUT_DIMENSIONALITY}."
    ]
   },
   {
@@ -144,15 +216,15 @@
  ],
  "metadata": {
   "environment": {
-   "kernel": "conda-base-py",
-   "name": "workbench-notebooks.m121",
+   "kernel": "python3",
+   "name": "common-cu121.m121",
    "type": "gcloud",
-   "uri": "us-docker.pkg.dev/deeplearning-platform-release/gcr.io/workbench-notebooks:m121"
+   "uri": "us-docker.pkg.dev/deeplearning-platform-release/gcr.io/base-cu121:m121"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3 (Local)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
